# MO-GOMEA-for-ENCAS

./: CMakeLists.txt  MO_GOMEA.c  README.md
